[gd_scene load_steps=44 format=3 uid="uid://4xh4dhaqwj3a"]

[ext_resource type="Texture2D" uid="uid://4mo4lcww44eq" path="res://graphics/enemies/bug/attack/00010.png" id="1_43gbj"]
[ext_resource type="Script" path="res://scenes/enemies/bug.gd" id="1_jhqld"]
[ext_resource type="Shader" path="res://scenes/enemies/bug.gdshader" id="1_utyqy"]
[ext_resource type="Texture2D" uid="uid://dij7lnxi2cmpg" path="res://graphics/enemies/bug/attack/00011.png" id="2_w6kbv"]
[ext_resource type="Texture2D" uid="uid://b23qri246ebcg" path="res://graphics/enemies/bug/attack/00012.png" id="3_ho7iu"]
[ext_resource type="Texture2D" uid="uid://ds0r5s4uhrkdw" path="res://graphics/enemies/bug/attack/00013.png" id="4_12me5"]
[ext_resource type="Texture2D" uid="uid://dqslaoyxysjgi" path="res://graphics/enemies/bug/attack/00014.png" id="5_13qlk"]
[ext_resource type="Texture2D" uid="uid://cuxkvycpl6qgn" path="res://graphics/enemies/bug/attack/00015.png" id="6_s8ibu"]
[ext_resource type="Texture2D" uid="uid://cq2r5b5y8sjq4" path="res://graphics/enemies/bug/attack/00016.png" id="7_yhccx"]
[ext_resource type="Texture2D" uid="uid://cr7dxjln1jjwo" path="res://graphics/enemies/bug/attack/00017.png" id="8_i210c"]
[ext_resource type="Texture2D" uid="uid://b2fstyusrhgba" path="res://graphics/enemies/bug/attack/00018.png" id="9_jrlgt"]
[ext_resource type="Texture2D" uid="uid://xuwy5hem6owi" path="res://graphics/enemies/bug/attack/00019.png" id="10_gtqlq"]
[ext_resource type="Texture2D" uid="uid://cq4x3a5gta33u" path="res://graphics/enemies/bug/attack/00020.png" id="11_kq6es"]
[ext_resource type="Texture2D" uid="uid://db4epuq4q0jje" path="res://graphics/enemies/bug/attack/00021.png" id="12_ffxhs"]
[ext_resource type="Texture2D" uid="uid://dtcyrqqnp73wi" path="res://graphics/enemies/bug/attack/00022.png" id="13_21jbr"]
[ext_resource type="Texture2D" uid="uid://dp43y1fd4l6kc" path="res://graphics/enemies/bug/attack/00023.png" id="14_g2rah"]
[ext_resource type="Texture2D" uid="uid://bmwm7w2kfd7i5" path="res://graphics/enemies/bug/attack/00024.png" id="15_qjj6g"]
[ext_resource type="Texture2D" uid="uid://c5pdo4o2nhtep" path="res://graphics/enemies/bug/attack/00025.png" id="16_2a1ry"]
[ext_resource type="Texture2D" uid="uid://bwvt3ctr43sa4" path="res://graphics/enemies/bug/attack/00026.png" id="17_7jvbe"]
[ext_resource type="Texture2D" uid="uid://ciugs05f0s2ry" path="res://graphics/enemies/bug/attack/00027.png" id="18_d2epl"]
[ext_resource type="Texture2D" uid="uid://dn2rw6e4o8pv8" path="res://graphics/enemies/bug/attack/00028.png" id="19_rg5l3"]
[ext_resource type="Texture2D" uid="uid://c1nt27vb57vr5" path="res://graphics/enemies/bug/attack/00029.png" id="20_h8lfp"]
[ext_resource type="Texture2D" uid="uid://ch0l1o75ro3ml" path="res://graphics/enemies/bug/attack/00030.png" id="21_a32yr"]
[ext_resource type="Texture2D" uid="uid://bbkpl65ys7oh0" path="res://graphics/enemies/bug/walk/00000.png" id="22_42nqv"]
[ext_resource type="Texture2D" uid="uid://ccn8xx3lwnyw0" path="res://graphics/enemies/bug/walk/00001.png" id="23_fpmpq"]
[ext_resource type="Texture2D" uid="uid://ddwpdv3pkhevj" path="res://graphics/enemies/bug/walk/00002.png" id="24_2mduf"]
[ext_resource type="Texture2D" uid="uid://dlp2niy4i5lij" path="res://graphics/enemies/bug/walk/00003.png" id="25_weqn2"]
[ext_resource type="Texture2D" uid="uid://b03g8lrnl6rar" path="res://graphics/enemies/bug/walk/00004.png" id="26_y4rnl"]
[ext_resource type="Texture2D" uid="uid://no5tcvst76e3" path="res://graphics/enemies/bug/walk/00005.png" id="27_356hp"]
[ext_resource type="Texture2D" uid="uid://fmwk4nh0xlog" path="res://graphics/enemies/bug/walk/00006.png" id="28_32516"]
[ext_resource type="Texture2D" uid="uid://dgyunv8o87lki" path="res://graphics/enemies/bug/walk/00007.png" id="29_wq2sn"]
[ext_resource type="Texture2D" uid="uid://v7wplcsi7qhp" path="res://graphics/enemies/bug/walk/00008.png" id="30_wgxhk"]
[ext_resource type="Texture2D" uid="uid://w03lvb1y3k7e" path="res://graphics/explosions/grunge.png" id="33_tn1ej"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bjjjn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2xv3e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_43gbj")
}, {
"duration": 1.0,
"texture": ExtResource("2_w6kbv")
}, {
"duration": 1.0,
"texture": ExtResource("3_ho7iu")
}, {
"duration": 1.0,
"texture": ExtResource("4_12me5")
}, {
"duration": 1.0,
"texture": ExtResource("5_13qlk")
}, {
"duration": 1.0,
"texture": ExtResource("6_s8ibu")
}, {
"duration": 1.0,
"texture": ExtResource("7_yhccx")
}, {
"duration": 1.0,
"texture": ExtResource("8_i210c")
}, {
"duration": 1.0,
"texture": ExtResource("9_jrlgt")
}, {
"duration": 1.0,
"texture": ExtResource("10_gtqlq")
}, {
"duration": 1.0,
"texture": ExtResource("11_kq6es")
}, {
"duration": 1.0,
"texture": ExtResource("12_ffxhs")
}, {
"duration": 1.0,
"texture": ExtResource("13_21jbr")
}, {
"duration": 1.0,
"texture": ExtResource("14_g2rah")
}, {
"duration": 1.0,
"texture": ExtResource("15_qjj6g")
}, {
"duration": 1.0,
"texture": ExtResource("16_2a1ry")
}, {
"duration": 1.0,
"texture": ExtResource("17_7jvbe")
}, {
"duration": 1.0,
"texture": ExtResource("18_d2epl")
}, {
"duration": 1.0,
"texture": ExtResource("19_rg5l3")
}, {
"duration": 1.0,
"texture": ExtResource("20_h8lfp")
}, {
"duration": 1.0,
"texture": ExtResource("21_a32yr")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_42nqv")
}, {
"duration": 1.0,
"texture": ExtResource("23_fpmpq")
}, {
"duration": 1.0,
"texture": ExtResource("24_2mduf")
}, {
"duration": 1.0,
"texture": ExtResource("25_weqn2")
}, {
"duration": 1.0,
"texture": ExtResource("26_y4rnl")
}, {
"duration": 1.0,
"texture": ExtResource("27_356hp")
}, {
"duration": 1.0,
"texture": ExtResource("28_32516")
}, {
"duration": 1.0,
"texture": ExtResource("29_wq2sn")
}, {
"duration": 1.0,
"texture": ExtResource("30_wgxhk")
}],
"loop": true,
"name": &"walk",
"speed": 30.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j05ak"]
shader = ExtResource("1_utyqy")
shader_parameter/color = Color(0.997406, 0.924753, 0.959864, 1)
shader_parameter/progress = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jghpq"]
radius = 498.571
height = 1740.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wgiex"]
radius = 7879.63

[sub_resource type="CircleShape2D" id="CircleShape2D_o8la4"]
radius = 2005.31

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v455t"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_gluwg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bvlfm"]
curve = SubResource("Curve_gluwg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m8l45"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.41
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 1000.0
initial_velocity_max = 1200.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_bvlfm")
anim_offset_max = 1.0

[node name="Bug" type="CharacterBody2D" groups=["Entity"]]
material = SubResource("ShaderMaterial_bjjjn")
scale = Vector2(0.07, 0.07)
collision_layer = 2
collision_mask = 15
motion_mode = 1
script = ExtResource("1_jhqld")

[node name="AnimatedWalk" type="AnimatedSprite2D" parent="."]
position = Vector2(150, 28.5714)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_2xv3e")
animation = &"walk"

[node name="AnimatedAttack" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_j05ak")
position = Vector2(150, 28.5714)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_2xv3e")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 30)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jghpq")

[node name="AggroAreas" type="Node2D" parent="."]
visible = false

[node name="NoticeArea2D" type="Area2D" parent="AggroAreas"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroAreas/NoticeArea2D"]
shape = SubResource("CircleShape2D_wgiex")

[node name="AttackArea2D" type="Area2D" parent="AggroAreas"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroAreas/AttackArea2D"]
shape = SubResource("CircleShape2D_o8la4")

[node name="Timers" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Particles" type="Node2D" parent="."]

[node name="HitParticles" type="GPUParticles2D" parent="Particles"]
modulate = Color(0.12061, 0.127734, 0.0810633, 1)
material = SubResource("CanvasItemMaterial_v455t")
scale = Vector2(1.00914, 0.993051)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_m8l45")
texture = ExtResource("33_tn1ej")
lifetime = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimatedAttack" to="." method="_on_animated_attack_animation_finished"]
[connection signal="body_entered" from="AggroAreas/NoticeArea2D" to="." method="_on_notice_area_2d_body_entered"]
[connection signal="body_exited" from="AggroAreas/NoticeArea2D" to="." method="_on_notice_area_2d_body_exited"]
[connection signal="body_entered" from="AggroAreas/AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AggroAreas/AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
